force-app/main/default/objects/Loan__c/fields/CarMake__c.field-meta.xml
<CustomField>
    <fullName>CarMake__c</fullName>
    <label>CarMake</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tesla</fullName>
                <default>true</default>
                <label>Tesla</label>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>