force-app/main/default/objects/Loan__c/fields/CarVIN__c.field-meta.xml
<CustomField>
    <fullName>CarVIN__c</fullName>
    <label>CarVIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>