force-app/main/default/objects/Loan__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>