force-app/main/default/objects/Loan__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Decided</fullName>
                <default>true</default>
                <label>To Be Decided</label>
            </value>
            <value>
                <fullName>Loan Cleared</fullName>
            </value>
            <value>
                <fullName>Poor Credit Score</fullName>
            </value>
            <value>
                <fullName>Documents missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>