force-app/main/default/objects/Loan__c/fields/Outcome_Details__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Details__c</fullName>
    <label>Outcome Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>