force-app/main/default/objects/Loan__c/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Property Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>