force-app/main/default/objects/Loan__c/fields/PropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>PropertyAddress__c</fullName>
    <label>Property Address</label>
    <length>254</length>
    <type>Text</type>
</CustomField>