force-app/main/default/objects/Loan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>DocumentsUploaded</fullName>
            </value>
            <value>
                <fullName>WaitingForThirdPartyForVerification</fullName>
            </value>
            <value>
                <fullName>SentToThirdPartyForVerification</fullName>
            </value>
            <value>
                <fullName>ReadyForApproval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>