force-app/main/default/objects/Loan__c/fields/VehicleDetails__c.field-meta.xml
<CustomField>
    <fullName>VehicleDetails__c</fullName>
    <label>Loan Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>